ingress/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
spec:
  parentRefs:
  - name: nginx-gateway
    namespace: ingress-nginx
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /frontend
    backendRefs:
    - name: frontend-svc
      namespace: app
      port: 80
