ingress/hr-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hr-ingress
  namespace: hr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hr
        pathType: Prefix
        backend:
          service:
            name: hr-service
            port: 
              number: 80
